added new files and changed directory